--- a/index.html
+++ b/index.html
@@ -1,79 +1,152 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>La Costa del Sol</title>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Restaurant-wireframe : ">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <![endif]-->
+    </head>
+    <body>
 
-    <title>Restaurant-wireframe</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/paulyhuang/restaurant-wireframe">View on GitHub</a>
-
-          <h1 id="project_title">Restaurant-wireframe</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/paulyhuang/restaurant-wireframe/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/paulyhuang/restaurant-wireframe/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+     <!-- Navigation Bar at top of web page -->
+    <div class="navbar navbar-inverse" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">La Costa del Sol</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            
+            <li class="active"><a href="home.html">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="order.html">Order Online</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+    <div class="container marketing">
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+      <div class="jumbotron">
+        <h1 class = "head" class="text-center">La Costa del Sol</h1>
+        <p class="lead" class="text-center"> Taqueria and Pupuseria</p> 
+        <br> 
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+            <div class="item active">
+              <img src="images/taco.jpg"  alt="home" >
+              <div class="carousel-caption">
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+              </div>
+            </div>
+            <div class="item">
+              <img src="img/pupusa.jpg" alt="Home" >
+              <div class="carousel-caption"> 
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+              </div>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+            </div>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+            <div class="item">
+              <img src="img/dish.jpg"  alt="Home" >
+              <div class="carousel-caption"> 
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+              </div>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+            </div>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+          </div>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+          </a>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Restaurant-wireframe maintained by <a href="https://github.com/paulyhuang">paulyhuang</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+        </div>
 
-    
+        <!-- Introduction text -->
+        <hr class="introduction-divider">
+        <div class="container marketing">
+          <div class="row introduction">
+            <div class="col-md-5">
+              <img class="introduction-image img-responsive" <img src="images/storefront.jpg"  >
+            </div> 
+            <div class="col-md-7">
+              <br></br>
+              <h2 class="introduction-heading">Welcome to La Costa del Sol! <span class="text-muted">
+              </span>
+            </h2>
+            <p class="lead">La Costa del Sol is San Jose's premium taqueria and pupuseria. We are dedicated to preparing great tasting food made with only the freshest and tastiest ingredients. We are proud to serve a variety of Central and South American specialties. We've been a San Jose favorite since 1990!</p>
+          </div> 
+        </div>
+      </div>
+      <div class="container marketing">
 
-  </body>
-</html>
+        <br></br>
+
+        <!-- Hours, location, facebook -->
+        <div class="row">
+          <div class="col-lg-4">
+            <img class="img-circle" src="images/time.jpg" alt="" style="width: 140px; height: 140px;">
+            <h2>Our Hours</h2>
+            <div class = "hours">
+              <p>Sunday-Thursday: 8:00 AM - 9:00 PM</p>
+              <p>Friday-Saturday: 8:00 AM - 10:00 PM</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <img class="img-circle" src="images/location.jpg" alt="" style="width: 140px; height: 140px;">
+            <h2>Location</h2>
+            <div class = "address">
+              <p>2951 Monterey Rd, Suite #60</p>
+              <p>San Jose, CA 95111</p>
+              <p>(408) 226-5300</p>
+            </div>
+            <p><a class="btn btn-default" href="https://www.google.com/maps/place/La+Costa+Del+Sol/@37.2889347,-121.8485196,886m/data=!3m1!1e3!4m2!3m1!1s0x0:0xe0cfbc3bf60ed5f7?hl=en" role="button" target="_blank">Open Google Maps &raquo;</a></p>
+          </div>
+
+          <div class="col-lg-4">
+            <img class="img-circle" src="images/yelp.jpg" alt="" style="width: 140px; height: 140px;">
+            <h2>Vist our Yelp Page!</h2>
+            <p><a class="btn btn-default" href="http://www.yelp.com/biz/la-costa-del-sol-san-jose" target = "_blank" role="button">Open Yelp &raquo;</a></p>
+          </div>
+        </div>
+
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
+      </body>
+      </html>
