--- a/order.html
+++ b/order.html
@@ -75,8 +75,8 @@
       <div class="container">
         <div class="menu-text">
           <div class="menu-header">
-            <h1>Order Online</h1>
-            <p>In order to order online, please follow this link!</p>
+            <h1>Order Online - We Deliver Straight to Your Door!</h1>
+            <p>In order to order online, please follow <a href="https://paulyhuang.wufoo.com/forms/z1s6jxfm1g4i0r6/">this link!</a></p>
          </div>
 
 
