--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         <h1 class = "head" class="text-center">La Costa del Sol</h1>
         <p class="lead" class="text-center"> Taqueria and Pupuseria</p> 
         <br> 
+
+        <!-- Carousel -->
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
           <ol class="carousel-indicators">
@@ -61,27 +63,24 @@
           <div class="carousel-inner">
 
             <div class="item active">
-              <img src="images/taco.jpg"  alt="home" >
+              <img src="images/taco.jpg"  alt="Home" >
               <div class="carousel-caption">
 
               </div>
             </div>
             <div class="item">
-              <img src="img/pupusa.jpg" alt="Home" >
+              <img src="images/pupusa.jpg" alt="Home" >
               <div class="carousel-caption"> 
 
               </div>
-
             </div>
 
             <div class="item">
-              <img src="img/dish.jpg"  alt="Home" >
+              <img src="images/dish.jpg"  alt="Home" >
               <div class="carousel-caption"> 
 
               </div>
-
             </div>
-
           </div>
 
           <!-- Controls -->
@@ -91,7 +90,6 @@
           <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
           </a>
-
         </div>
 
         <!-- Introduction text -->
@@ -102,11 +100,11 @@
               <img class="introduction-image img-responsive" <img src="images/storefront.jpg"  >
             </div> 
             <div class="col-md-7">
-              <br></br>
               <h2 class="introduction-heading">Welcome to La Costa del Sol! <span class="text-muted">
               </span>
             </h2>
-            <p class="lead">La Costa del Sol is San Jose's premium taqueria and pupuseria. We are dedicated to preparing great tasting food made with only the freshest and tastiest ingredients. We are proud to serve a variety of Central and South American specialties. We've been a San Jose favorite since 1990!</p>
+            <p class="lead">La Costa del Sol is San Jose's premium taqueria and pupuseria. We are dedicated to preparing great tasting food made with only the freshest ingredients. La Costa del Sol is proud to serve both Mexican and Salvadorean cuisines. We are also equipped to cater any event.  Bring some flavor to your next business lunch with our Salvadorean catering! 
+            </p>
           </div> 
         </div>
       </div>
