--- a/order.html
+++ b/order.html
@@ -76,7 +76,7 @@
         <div class="menu-text">
           <div class="menu-header">
             <h1>Order Online - We Deliver Straight to Your Door!</h1>
-            <p>In order to order online, please follow <a href="https://paulyhuang.wufoo.com/forms/z1s6jxfm1g4i0r6/">this link!</a></p>
+            <p>To order online, please call us at (408) 226 - 5300 or follow <a href="https://paulyhuang.wufoo.com/forms/z1s6jxfm1g4i0r6/">this link!</a></p>
          </div>
 
 
