--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </div>
 
           <div class="col-lg-4">
-            <img class="img-circle" src="images/location.jpg" alt="" style="width: 140px; height: 140px;">
+            <img class="img-circle" src="images/map.jpg" alt="" style="width: 140px; height: 140px;">
             <h2>Location</h2>
             <div class = "address">
               <p>2951 Monterey Rd, Suite #60</p>
