--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
           </div>
 
           <div class="col-lg-4">
-            <img class="img-circle" src="images/map.jpg" alt="" style="width: 140px; height: 140px;">
+            <img class="img-circle" src="images/yelp.jpg" alt="" style="width: 140px; height: 140px;">
 
             <h2>Location</h2>
-            
+            <div class = "address">
               <p>2951 Monterey Rd, Suite #60</p>
               <p>San Jose, CA 95111</p>
               <p>(408) 226-5300</p>
-            
+            </div>
             <p><a class="btn btn-default" href="https://www.google.com/maps/place/La+Costa+Del+Sol/@37.2889347,-121.8485196,886m/data=!3m1!1e3!4m2!3m1!1s0x0:0xe0cfbc3bf60ed5f7?hl=en" role="button" target="_blank">Open Google Maps &raquo;</a></p>
           </div>
 
