--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </div>
 
           <div class="col-lg-4">
-            <img class="img-circle" src="images/yelp.jpg" alt="" style="width: 140px; height: 140px;">
+            <img class="img-circle" src="images/location.jpg" alt="" style="width: 140px; height: 140px;">
 
             <h2>Location</h2>
             <div class = "address">
@@ -135,6 +135,7 @@
             </div>
             <p><a class="btn btn-default" href="https://www.google.com/maps/place/La+Costa+Del+Sol/@37.2889347,-121.8485196,886m/data=!3m1!1e3!4m2!3m1!1s0x0:0xe0cfbc3bf60ed5f7?hl=en" role="button" target="_blank">Open Google Maps &raquo;</a></p>
           </div>
+
 
           <div class="col-lg-4">
             <img class="img-circle" src="images/yelp.jpg" alt="" style="width: 140px; height: 140px;">
