--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             
-            <li class="active"><a href="home.html">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="order.html">Order Online</a></li>
               </ul>
